[tool.poetry]
name = "navi-prediction"
version = "0.1.0"
description = ""
authors = ["suk-6 <me@suk.kr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
opencv-python = "^4.10.0.84"
torch = "^2.5.1"
torchvision = "^0.20.1"
numpy = "^2.1.3"
flask = "^3.1.0"
pillow = "^11.0.0"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
